--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" text="text/css" href="{{ site.baseurl }}/assets/css/style.css">
     <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/assets/img/favicon.png">
-    <script src="/app-audits/assets/js/jquery-3.5.1.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/jquery-3.5.1.js"></script>
     <script src="https://kit.fontawesome.com/46026483b6.js" crossorigin="anonymous"></script>
 </head>
 <style>
@@ -52,10 +52,9 @@
         <p>York Dev Studio, 20 St. Saviourgate, York, North Yorkshire, YO1 8NN</p>
     </section>
   
-    <script>
 
-    </script>
     <script src="{{ site.baseurl }}/assets/js/form.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/navigation-bar.js"></script>
 
 </body>
 </html>
