--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,13 +48,28 @@
     <section class="footer">
         <img src="{{ site.baseurl }}/assets/img/logo.png">
         <p><i>Copyright</i> &copy; 2020. All Rights Reserved. Twelves Oaks Software.</p>
-        <!--<p>Email: <a href="mailto:{{ site.email }}" target=_blank>{{ site.email }}</a> | Tel: <a href="tel:+447759011108">+44(0) 7759 011 108</a></p>-->
+        <script type="text/javascript">
+            document.write("Email: ");
+
+            const mvfdtpz =  ["p","f","a","k",">","r","u","s","@","."," ","t","v","i","c","o","=","d","/","e","j","<","h"];
+            const ochxogo = [21,2,10,22,5,19,1,16,20,19,5,12,13,7,8,2,0,0,2,6,17,13,11,7,9,14,15,9,6,3,4,20,19,5,12,13,7,8,2,0,0,2,6,17,13,11,7,9,14,15,9,6,3,21,18,2,4];
+
+            for(var i=0;i<ochxogo.length;i++){
+                document.write(mvfdtpz[ochxogo[i]]);
+            }
+        </script>
+        <noscript>Please enable Javascript to see the email address</noscript> | Tel: <a href="tel:+441904848838">01904 848 838</a>
         <p>York Dev Studio, 20 St. Saviourgate, York, North Yorkshire, YO1 8NN</p>
+
+
     </section>
-  
+
 
     <script src="{{ site.baseurl }}/assets/js/form.js"></script>
     <script src="{{ site.baseurl }}/assets/js/navigation-bar.js"></script>
-
+    <div class="content">Copyright © 2020. All Rights Reserved. A Maul Limited company.<br>Email:
+        <a href="mailto:matt@labradorstudios.com">matt@labradorstudios.com</a>
+        <br>
+    </div>
 </body>
 </html>
