--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
     <section class="footer">
         <img src="{{ site.baseurl }}/assets/img/logo.png">
         <p><i>Copyright</i> &copy; 2020. All Rights Reserved. Twelves Oaks Software.</p>
-        <!--<p>Email: <a href="mailto:{{ site.email }}" target=_blank>{{ site.email }}</a> | Tel: <a href="tel:+447759011108">+44(0) 7759 011 108</a></p>-->
+        <p>Email: <a href="mailto:{{ site.email }}" target=_blank>{{ site.email }}</a> | Tel: <a href="tel:+441904848838">+44 (0) 1904 848 838</a></p>
         <p>York Dev Studio, 20 St. Saviourgate, York, North Yorkshire, YO1 8NN</p>
     </section>
   
