--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,8 +181,9 @@ ul {
         align-items: center;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
-        padding: 0 20px;
+        padding: 0px 20px;
         width: 200px;
+        overflow-y: scroll;
     }
     nav li {
         letter-spacing: 5px;
