--- a/_includes/indexbottom.html
+++ b/_includes/indexbottom.html
@@ -143,7 +143,7 @@
 <section class="bar bar-style-1">
     <div class="bar-flex">
         <section class="image-section">
-            <a href="{{ site.baseurl }}/lay-of-the-land" class="animated-button">
+            <a href="{{ site.baseurl }}/lay-of-the-land" class="animated-button" onclick="">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -155,8 +155,8 @@
         </section>
         <section>
             <section class="description-section">
-                <h2>Lay of the Land</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vel justo sodales, posuere arcu porttitor, scelerisque leo. Suspendisse libero ipsum, luctus lacinia metus sit amet, semper maximus purus. Nullam rutrum tempor massa, sit amet euismod dui pellentesque et. Donec vitae finibus metus. Suspendisse auctor tortor est, et elementum arcu pulvinar tincidunt. Etiam varius eget lacus ut finibus. Fusce enim enim, tempus at eleifend vitae, varius a mauris. Mauris eu purus a ex sagittis imperdiet et sit amet est. </p>
+                <h2>{{ page.title3 }}</h2>
+                <p>{{ page.description3 }}</p>
             </section>
             <section class="button-section">
                 <a href="{{ site.baseurl }}/lay-of-the-land"><button class="e62555-button"><i class="fas fa-globe"></i>Find out more</button></a>
@@ -169,7 +169,7 @@
 <section class="bar bar-style-2">
     <div class="bar-flex">
         <section class="image-section">
-            <a href="{{ site.baseurl }}/due-diligence" class="animated-button">
+            <a href="{{ site.baseurl }}/due-diligence" class="animated-button" onclick="">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -181,8 +181,8 @@
         </section>
         <section>
             <section class="description-section">
-                <h2>Due Diligence</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vel justo sodales, posuere arcu porttitor, scelerisque leo. Suspendisse libero ipsum, luctus lacinia metus sit amet, semper maximus purus. Nullam rutrum tempor massa, sit amet euismod dui pellentesque et. Donec vitae finibus metus. Suspendisse auctor tortor est, et elementum arcu pulvinar tincidunt. Etiam varius eget lacus ut finibus. Fusce enim enim, tempus at eleifend vitae, varius a mauris. Mauris eu purus a ex sagittis imperdiet et sit amet est. </p>
+                <h2>{{ page.title4 }}</h2>
+                <p>{{ page.description4 }}</p>
             </section>
             <section class="button-section">
                 <a href="{{ site.baseurl }}/due-diligence"><button class="e62555-button"><i class="fas fa-globe"></i>Find out more</button></a>
@@ -195,7 +195,7 @@
 <section class="bar bar-style-1">
     <div class="bar-flex">
         <section class="image-section">
-            <a href="{{ site.baseurl }}/dispute-resolution" class="animated-button">
+            <a href="{{ site.baseurl }}/dispute-resolution" class="animated-button" onclick="">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -207,8 +207,8 @@
         </section>
         <section>
             <section class="description-section">
-                <h2>Dispute Resolution</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vel justo sodales, posuere arcu porttitor, scelerisque leo. Suspendisse libero ipsum, luctus lacinia metus sit amet, semper maximus purus. Nullam rutrum tempor massa, sit amet euismod dui pellentesque et. Donec vitae finibus metus. Suspendisse auctor tortor est, et elementum arcu pulvinar tincidunt. Etiam varius eget lacus ut finibus. Fusce enim enim, tempus at eleifend vitae, varius a mauris. Mauris eu purus a ex sagittis imperdiet et sit amet est. </p>
+                <h2>{{ page.title5 }}</h2>
+                <p>{{ page.description5 }}</p>
             </section>
             <section class="button-section">
                 <a href="{{ site.baseurl }}/dispute-resolution"><button class="e62555-button"><i class="fas fa-globe"></i>Find out more</button></a>
