disable fixed attachment for phone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -399,6 +399,15 @@ ul {
     .bar-flex {
         flex-direction: column;
     }
+    .content-page-header {
+        background-attachment: scroll;
+    }
+}
+
+@media (max-height: 400px) {
+    .content-page-header {
+        background-attachment: scroll;
+    }
 }
 
 /* Standarised Font Styling */
