--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,11 @@ button:focus {
     outline: none;
 }
 
+nav {
+    background: rgb(0,0,0);
+    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.3295693277310925) 39%, rgba(0,0,0,0.2679446778711485) 43%, rgba(0,0,0,0.19791666666666663) 48%, rgba(0,0,0,0.18110994397759106) 54%, rgba(0,0,0,0) 100%);
+}
+
 .navigation nav {
     display: flex;
     flex-direction: row;
