--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,16 @@
 @font-face {
     font-family: 'Montserrat';
-    src: url(../font/Montserrat-Medium.ttf);
+    src: url(/app-audits/assets/font/Montserrat-Medium.ttf);
 }
 
 @font-face {
     font-family: 'Montserrat-Bold';
-    src: url(../font/Montserrat-Bold.ttf);
+    src: url(/app-audits/assets/font/Montserrat-Bold.ttf);
 }
 
 @font-face {
     font-family: 'Montserrat-Light';
-    src: url(../font/Montserrat-Light.ttf);
+    src: url(/app-audits/assets/font/Montserrat-Light.ttf);
 }
 
 html, body {
