footer and added back shadow bav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,8 @@ button:focus {
 }
 
 nav {
-    
+    background: rgb(0,0,0);
+    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.3295693277310925) 39%, rgba(0,0,0,0.2679446778711485) 43%, rgba(0,0,0,0.19791666666666663) 48%, rgba(0,0,0,0.18110994397759106) 54%, rgba(0,0,0,0) 100%);
 }
 
 .navigation nav {
@@ -53,7 +54,7 @@ nav {
     align-items: center;
     position: sticky;
     transition: 0.5s ease all;
-    background-color: rgba(23,23,23,0);
+    background-color: none;
     padding: 40px 100px;
 }
 
