--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,8 @@ button:focus {
 }
 
 nav {
-   
+    background: rgb(0,0,0);
+    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.6250875350140056) 25%, rgba(0,0,0,0.4542191876750701) 50%, rgba(0,0,0,0.09567577030812324) 95%, rgba(0,0,0,0) 100%);
 }
 
 .navigation nav {
