--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,16 @@
 @font-face {
     font-family: 'Montserrat';
-    src: url(/app-audits/assets/font/Montserrat-Medium.ttf);
+    src: url(/assets/font/Montserrat-Medium.ttf);
 }
 
 @font-face {
     font-family: 'Montserrat-Bold';
-    src: url(/app-audits/assets/font/Montserrat-Bold.ttf);
+    src: url(/assets/font/Montserrat-Bold.ttf);
 }
 
 @font-face {
     font-family: 'Montserrat-Light';
-    src: url(/app-audits/assets/font/Montserrat-Light.ttf);
+    src: url(/assets/font/Montserrat-Light.ttf);
 }
 
 html, body {
@@ -18,10 +18,6 @@ html, body {
     padding: 0;
     margin: 0;
     overflow-x: hidden;
-}
-
-body {
-
 }
 
 div, h2, h3, h4, h5, h6, a, nav, span, button, input, textarea {
@@ -33,7 +29,7 @@ h1 {
 }
 
 a {
-    transition-delay: 1000ms; 
+    transition-delay: 1000ms;
     cursor: pointer;
     text-decoration: none;
 }
@@ -43,7 +39,7 @@ button:focus {
 }
 
 nav {
-    background: linear-gradient(to bottom, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 100%);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -54,21 +50,12 @@ nav {
 }
 
 .navigation nav.scroll {
-    background-color: rgba(23,23,23,1);
+    background-color: rgba(23, 23, 23, 1);
     padding: 10px 100px;
 }
 
-/* .navigation nav.scroll {
-    background-color: rgba(23,23,23,0.8);
-} */
-
-/* .navigation nav:hover {
-    background-color: rgba(23,23,23,0.8);
-} */
-
 .navigation {
     margin: 0 auto 0 auto;
-    position: relative;
     width: 100%;
     position: fixed;
     top: 0;
@@ -132,7 +119,7 @@ ul {
 
 .nav_links, li, a {
     transition: all 0.3s ease 0s;
-    
+
 }
 
 .nav_links, li, a:hover {
@@ -156,28 +143,28 @@ ul {
     }
 }
 
-.burger div {
+#burger div {
     width: 25px;
     height: 2.5px;
     background-color: white;
-    margin: 5px;
-    margin-right: 20px;
+    margin: 5px 20px 5px 5px;
     transition: all 0.3s ease;
 }
 
-.burger {
+#burger {
     display: none;
 }
 
 @media (max-width: 1200px) {
     html, body {
-    overflow-x: hidden;
+        overflow-x: hidden;
     }
+
     .nav_links {
         position: absolute;
-        right: 0px;
+        right: 0;
         height: 100vh;
-        top: 0px;
+        top: 0;
         margin-top: 0;
         background-color: #171717;
         flex-direction: column;
@@ -185,21 +172,24 @@ ul {
         align-items: center;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
-        padding: 0px 20px;
+        padding: 0 20px;
         width: 200px;
         overflow-y: scroll;
     }
+
     nav li {
         letter-spacing: 5px;
         text-align: center;
         margin: 20px 0;
     }
+
     nav li a {
         font-size: 20px;
         font-weight: 900;
         margin: 0;
     }
-    .burger {
+
+    #burger {
         display: block;
         cursor: pointer;
         z-index: 1000;
@@ -210,24 +200,25 @@ ul {
     transform: translateX(0%);
 }
 
-.link{
+.link {
     position: relative;
     width: 100%;
 }
 
-.link:after{
+.link:after {
     content: '';
     position: absolute;
-    width: 0; height: 3px;
+    width: 0;
+    height: 3px;
     display: block;
-    margin-top: 0px;
+    margin-top: 0;
     right: 0;
     background: #fff;
     transition: width .2s ease;
     -webkit-transition: width .2s ease;
 }
 
-.link:hover:after{
+.link:hover:after {
     width: 100%;
     left: 0;
     background: #fff;
@@ -247,9 +238,11 @@ ul {
 .toggle .line1 {
     transform: rotate(45deg) translate(5px, 6px);
 }
+
 .toggle .line2 {
     opacity: 0;
 }
+
 .toggle .line3 {
     transform: rotate(-45deg) translate(5px, -6px);
 }
@@ -302,7 +295,7 @@ ul {
 
 .button-section button:hover {
     background: #ffffff;
-    box-shadow: 0px 0px 5px #d6d6d6;
+    box-shadow: 0 0 5px #d6d6d6;
     letter-spacing: 3px;
     font-weight: 800;
 }
@@ -328,8 +321,13 @@ ul {
     background-attachment: fixed;
 }
 
-.bar-style-1 {background: white;}
-.bar-style-2 {background: #fbfbfb;}
+.bar-style-1 {
+    background: white;
+}
+
+.bar-style-2 {
+    background: #fbfbfb;
+}
 
 
 .bar-flex {
@@ -348,27 +346,34 @@ ul {
         padding: 0 20px !important;
         min-height: 60px;
     }
+
     .nav-text img {
         width: 30px;
         height: auto;
     }
+
     .content-page-header div {
         margin: 20px;
     }
+
     .description-section {
         margin: 0;
     }
+
     .button-section button {
         margin: 5px;
         width: 210px;
     }
+
     .slideshow-section {
         padding: 20px;
     }
+
     .bar {
         padding: 20px;
         border-top: 2px solid #171717;
     }
+
     .bar-flex {
         flex-direction: column;
     }
@@ -379,30 +384,38 @@ ul {
         padding: 0 20px !important;
         min-height: 60px;
     }
+
     .nav-text img {
         width: 30px;
         height: auto;
     }
+
     .content-page-header div {
         margin: 20px;
     }
+
     .description-section {
         margin: 0;
     }
+
     .button-section button {
         margin: 5px;
         width: 210px;
     }
+
     .slideshow-section {
         padding: 20px;
     }
+
     .bar {
         padding: 20px;
         border-top: 2px solid #171717;
     }
+
     .bar-flex {
         flex-direction: column;
     }
+
     .content-page-header {
         background-attachment: scroll;
     }
@@ -481,9 +494,11 @@ ul {
     .page-title h2 {
         font-size: 20px;
     }
+
     .legal-text-container {
         padding: 70px 20px;
     }
+
     .slider-title {
         padding: 20px;
     }
@@ -501,7 +516,7 @@ ul {
 
 .footer p {
     color: #ffffff;
-    font-size: 20;
+    font-size: 20px;
     text-align: center;
     margin: 5px 0;
 }
@@ -523,7 +538,7 @@ ul {
     text-decoration: none;
 }
 
-@media(orientation: portrait) {
+@media (orientation: portrait) {
     .footer p {
         margin: 10px 0;
     }
@@ -536,7 +551,7 @@ ul {
     top: 0;
     left: 0;
     width: 100%;
-    background-image: linear-gradient(-45deg,rgba(54, 123, 227, 0.95), rgba(227, 54, 87, 0.95));
+    background-image: linear-gradient(-45deg, rgba(54, 123, 227, 0.95), rgba(227, 54, 87, 0.95));
     min-height: 100vh;
     display: none;
     justify-content: center;
@@ -552,7 +567,7 @@ ul {
     margin: 20px;
 }
 
-.close {
+#close {
     position: absolute;
     right: 20px;
     top: 20px;
@@ -649,7 +664,7 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
     background: #ffffff;
-    box-shadow: 0px 0px 5px #d6d6d6;
+    box-shadow: 0 0 5px #d6d6d6;
     letter-spacing: 3px;
     font-weight: 800;
 }
