new DR pic triangle adjustment and button

--- a/_includes/indexbottom.html
+++ b/_includes/indexbottom.html
@@ -18,19 +18,20 @@
     }
 
     .animated-button button {
+        padding: 0;
         position: absolute;
         right: 20px;
         bottom: 20px;
-        width: 50px;
-        height: 50px;
-        border-radius: 25px;
+        width: 2px;
+        height: 2px;
+        border-radius: 1px;
         background: #171717;
         border: none;
         transition: 1000ms ease all;
     }
 
     .animated-button:hover button {
-        transform: scale(10);
+        transform: scale(280);
         background: rgba(23,23,23,0.3);
     }
 
@@ -127,10 +128,6 @@
             width: 85vw;
             max-width: 400px;
             height: 200px;
-        }
-        .animated-button button {
-            width: 25px;
-            height: 25px;
         }
         .animated-button p {
             bottom: 10px;
