--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
                     <img src="{{ site.baseurl }}/assets/img/logo-frame.png">
                 </a>
             </div>
-            <ul class="nav_links">
+            <ul id="nav_links">
                 <li><a class="link" href="{{ site.baseurl }}/">Home</a></li>
                 <li><a class="link" href="{{ site.baseurl }}/lay-of-the-land/">Lay of the Land</a></li>
                 <li><a class="link" href="{{ site.baseurl }}/due-diligence/">Due Diligence</a></li>
@@ -62,25 +62,6 @@
         </p>
         <p>York Dev Studio, 20 St. Saviourgate, York, North Yorkshire, YO1 8NN</p>
     </section>
-  
-    <script>
-
-        window.onscroll = () => {
-            const nav = document.querySelectorAll('.navigation nav');
-            const navImg = document.querySelectorAll('.nav-text img');
-
-            for (i = 0; i < nav.length; i++) {
-                if (this.scrollY <= 100) {
-                    nav[i].className = '';
-                    navImg[i].className = '';
-                } else {
-                    nav[i].className = 'scroll';
-                    navImg[i].className = 'scroll';
-                }
-            };
-        };
-
-    </script>
     <script src="{{ site.baseurl }}/assets/js/form.js"></script>
     <script src="{{ site.baseurl }}/assets/js/navigation-bar.js"></script>
 </body>
