nav max height 500px

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 <body>
     <section class="navigation">
         <nav>
-            <div class="nav-text-and-nav_links_language">
+            <div class="nav_image">
                 <a class="nav-text" href="{{ site.baseurl }}/">
                     <img src="{{ site.baseurl }}/assets/img/logo-frame.png">
                 </a>
