--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
                     <img src="{{ site.baseurl }}/assets/img/logo-frame.png">
                 </a>
             </div>
-            <ul id="nav_links">
+            <ul class="nav_links">
                 <li><a class="link" href="{{ site.baseurl }}/">Home</a></li>
                 <li><a class="link" href="{{ site.baseurl }}/lay-of-the-land/">Lay of the Land</a></li>
                 <li><a class="link" href="{{ site.baseurl }}/due-diligence/">Due Diligence</a></li>
