--- a/assets/css/homepage.scss
+++ b/assets/css/homepage.scss
@@ -117,3 +117,140 @@ body {
         }
     }
 }
+
+.animated-button {
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+    transition: 400ms;
+    transition-delay: 1000ms; 
+    box-shadow: 0 0 2px #9c9c9c, 0 0 10px #9c9c9c, 0 0 10px #9c9c9c;
+    border-radius: 0px;
+    width: 500px;
+    height: 300px;
+}
+
+.animated-button:hover {
+    box-shadow: 0 0 10px #9c9c9c, 0 0 40px #9c9c9c, 0 0 80px #9c9c9c;
+    transition-delay: 1000ms; 
+    border: none;
+}
+
+.animated-button button {
+    padding: 0;
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+    width: 2px;
+    height: 2px;
+    border-radius: 1px;
+    background: #171717;
+    border: none;
+    transition: 1000ms ease all;
+}
+
+.animated-button:hover button {
+    transform: scale(280);
+    background: rgba(23,23,23,0.3);
+}
+
+.animated-button span {
+    position: absolute;
+    display: block;
+    z-index: 10;
+}
+
+.animated-button span:nth-child(1) {
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 5px;
+    background: linear-gradient(90deg, transparent, #171717);
+}
+
+.animated-button:hover span:nth-child(1) {
+    left: 100%;
+    transition: 1s;
+}
+
+.animated-button span:nth-child(2) {
+    top: -100%;
+    right: 0;
+    width: 5px;
+    height: 100%;
+    background: linear-gradient(180deg, transparent, #171717);
+}
+
+.animated-button:hover span:nth-child(2) {
+    top: 100%;
+    transition: 1s;
+    transition-delay: 0.25s;
+}
+
+.animated-button span:nth-child(3) {
+    bottom: 0;
+    right: -100%;
+    width: 100%;
+    height: 5px;
+    background: linear-gradient(270deg, transparent, #171717);
+}
+
+.animated-button:hover span:nth-child(3) {
+    right: 100%;
+    transition: 1s;
+    transition-delay: 0.5s;
+}
+
+.animated-button span:nth-child(4) {
+    bottom: -100%;
+    left: 0;
+    width: 5px;
+    height: 100%;
+    background: linear-gradient(360deg, transparent, #171717);
+}
+
+.animated-button:hover span:nth-child(4) {
+    bottom: 100%;
+    transition: 1s;
+    transition-delay: 0.75s;
+}
+
+.animated-button img {
+    width: 500px;
+    transition: 0.4s ease all;
+    transition-delay: 1000ms; 
+}
+
+.animated-button:hover img {
+    transform: scale(1.2);
+}
+
+.animated-button p {
+    position: absolute;
+    bottom: 20px;
+    left: 30px;
+    z-index: 20;
+    font-size: 16px;
+    color: white;
+    letter-spacing: 1.5px;
+}
+
+@media (max-width: 1200px) {
+    .animated-button {
+        width: 100%;
+        max-width: 300px;
+    }
+}
+
+@media (max-width: 1050px) and (orientation: portrait) {
+    .animated-button {
+        width: 85vw;
+        max-width: 400px;
+        height: 200px;
+    }
+    .animated-button p {
+        bottom: 10px;
+        left: 15px;
+        font-size: 12px;
+    }
+}
