remove unused section 4

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -1,28 +1,21 @@
-<section class="bar bar-style-1">
+<section class="bar">
     <section class="description-section">
         <h2>{{ page.title1 }}</h2>
         <p>{{ page.description1 }}</p>
     </section>
 </section>
 
-<section class="bar bar-style-2">
+<section class="bar">
     <section class="description-section">
         <h2>{{ page.title2 }}</h2>
         <p>{{ page.description2 }}</p>
     </section>
 </section>
 
-<section class="bar bar-style-1">
+<section class="bar">
     <section class="description-section">
         <h2>{{ page.title3 }}</h2>
         <p>{{ page.description3 }}</p>
-    </section>
-</section>
-
-<section class="bar bar-style-2">
-    <section class="description-section">
-        <h2>{{ page.title4 }}</h2>
-        <p>{{ page.description4 }}</p>
     </section>
     <section class="button-section">
         <button class="bg-modal-selected"><i class="fas fa-file-signature"></i>Contact Us</button>
