include missed file

--- a/_includes/indexdescription.html
+++ b/_includes/indexdescription.html
@@ -1,11 +1,11 @@
-<section class="bar bar-style-1">
+<section class="bar">
     <section class="description-section">
         <h2>{{ page.title1 }}</h2>
         <p>{{ page.description1 }}</p>
     </section>
 </section>
 
-<section class="bar bar-style-2">
+<section class="bar">
     <section class="description-section">
         <h2>{{ page.title2 }}</h2>
         <p>{{ page.description2 }}</p>
