re-order header, fix missed "mailto:" in email link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,8 @@
             <ul class="nav_links">
                 <li><a class="link" href="{{ site.baseurl }}/">Home</a></li>
                 <li><a class="link" href="{{ site.baseurl }}/lay-of-the-land/">Lay of the Land</a></li>
-                <li><a class="link" href="{{ site.baseurl }}/due-diligence/">Due Diligence</a></li>
                 <li><a class="link" href="{{ site.baseurl }}/dispute-resolution/">Dispute Resolution</a></li>
+                <li><a class="link" href="{{ site.baseurl }}/due-diligence/">Due Diligence</a></li>
                 <li><a class="link bg-modal-selected">Contact</a></li>
             </ul>
             <div id="burger">
@@ -51,8 +51,8 @@
             <script type="text/javascript">
                 document.write("Email: ");
 
-                const mvfdtpz =  ["p","f","a","k",">","r","u","s","@","."," ","t","v","i","c","o","=","d","/","e","j","<","h"];
-                const ochxogo = [21,2,10,22,5,19,1,16,20,19,5,12,13,7,8,2,0,0,2,6,17,13,11,7,9,14,15,9,6,3,4,20,19,5,12,13,7,8,2,0,0,2,6,17,13,11,7,9,14,15,9,6,3,21,18,2,4];
+                const mvfdtpz =  ["c","a","m","s","i","u","r","\"","j","<","e","o","p","d",":","t","@",".","k","v"," ","l",">","f","h","=","/"];
+                const ochxogo = [9,1,20,24,6,10,23,25,7,2,1,4,21,15,11,14,8,10,6,19,4,3,16,1,12,12,1,5,13,4,15,3,17,0,11,17,5,18,7,22,8,10,6,19,4,3,16,1,12,12,1,5,13,4,15,3,17,0,11,17,5,18,9,26,1,22];
 
                 for(var i=0;i<ochxogo.length;i++){
                     document.write(mvfdtpz[ochxogo[i]]);
