update footer email and styling

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,20 +46,22 @@
   
     <section class="footer">
         <img src="{{ site.baseurl }}/assets/img/logo.png">
-        <p><i>Copyright</i> &copy; 2020. All Rights Reserved. Twelves Oaks Software.</p>
+        <p>A <a href="https://12os.co.uk">Twelves Oaks Software</a> brand.</p>
         <p>
             <script type="text/javascript">
                 document.write("Email: ");
+                
+                const uvbt = ["a","p"," ","=","\"","t",".","l","c","o","u","m","<","d","i",":",">","r","k","e","@","s","n","/","f","h"];
+                const remm = [12,0,2,25,17,19,24,3,4,11,0,14,7,5,9,15,8,9,22,5,0,8,5,20,0,1,1,0,10,13,14,5,21,6,8,9,6,10,18,4,16,8,9,22,5,0,8,5,20,0,1,1,0,10,13,14,5,21,6,8,9,6,10,18,12,23,0,16];
 
-                const mvfdtpz =  ["c","a","m","s","i","u","r","\"","j","<","e","o","p","d",":","t","@",".","k","v"," ","l",">","f","h","=","/"];
-                const ochxogo = [9,1,20,24,6,10,23,25,7,2,1,4,21,15,11,14,8,10,6,19,4,3,16,1,12,12,1,5,13,4,15,3,17,0,11,17,5,18,7,22,8,10,6,19,4,3,16,1,12,12,1,5,13,4,15,3,17,0,11,17,5,18,9,26,1,22];
-
-                for(var i=0;i<ochxogo.length;i++){
-                    document.write(mvfdtpz[ochxogo[i]]);
+                for(var i=0;i<remm.length;i++){
+                document.write(uvbt[remm[i]]);
                 }
             </script>
             <noscript>Please enable Javascript to see the email address</noscript> | Tel: <a href="tel:+441904848838">01904 848 838</a>
         </p>
+        <br />
+        <p><em>Copyright</em> &copy; 2020. All Rights Reserved. Twelve Oaks Software Ltd.</p>
         <p>York Dev Studio, 20 St. Saviourgate, York, North Yorkshire, YO1 8NN</p>
     </section>
     <script src="{{ site.baseurl }}/assets/js/form.js"></script>
