Extract report list

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -9,6 +9,7 @@
     <section class="description-section">
         <h2>{{ page.title2 }}</h2>
         <p>{{ page.description2 }}</p>
+        {% include report.html %}
     </section>
 </section>
 
