send data to API

--- a/_includes/report.html
+++ b/_includes/report.html
@@ -2,87 +2,87 @@ Our review will cover;
 <section class="list-style">
     <div class="each">
             <div><i class="fas fa-check-circle"></i></div>
-            <div><p>Application architecture</p></div>
+            <div>Application architecture</div>
     </div>
     <div class="each">
             <div><i class="fas fa-check-circle"></i></div>
-            <div><p>System infrastructure</p></div>
+            <div>System infrastructure</div>
     </div>
     <div class="each">
             <div><i class="fas fa-check-circle"></i></div>
-            <div><p>Code documentation</p></div>
+            <div>Code documentation</div>
     </div>
     <div class="each">
             <div><i class="fas fa-check-circle"></i></div>
-            <div><p>Application documentation</p></div>
+            <div>Application documentation</div>
     </div>
     <div class="each">
             <div><i class="fas fa-check-circle"></i></div>
-            <div><p>Code "smells"</p></div>
+            <div>Code "smells"</div>
     </div>
     <div class="each">
             <div><i class="fas fa-check-circle"></i></div>
-            <div><p>Unit Test Coverage</p></div>
+            <div>Unit Test Coverage</div>
     </div>
     <div class="each">
             <div><i class="fas fa-check-circle"></i></div>
-            <div><p>Testing, Bug Reporting, Triaging, and Fixing Pipeline</p></div>
+            <div>Testing, Bug Reporting, Triaging, and Fixing Pipeline</div>
     </div>
     <div class="each">
             <div><i class="fas fa-check-circle"></i></div>
-            <div><p>Existing Logical Bugs</p></div>
+            <div>Existing Logical Bugs</div>
     </div>
     <div class="each">
             <div><i class="fas fa-check-circle"></i></div>
-            <div><p>Existing Syntactical Bugs</p></div>
+            <div>Existing Syntactical Bugs</div>
     </div>
     <div class="each">
             <div><i class="fas fa-check-circle"></i></div>
-            <div><p>Development Pipelines and Procuedures</p></div>
+            <div>Development Pipelines and Procuedures</div>
     </div>
     <div class="each">
             <div><i class="fas fa-check-circle"></i></div>
-            <div><p>Time-to-market for New Changes and Features</p></div>
+            <div>Time-to-market for New Changes and Features</div>
     </div>
     <div class="each">
             <div><i class="fas fa-check-circle"></i></div>
-            <div><p>Source Control Procedures</p></div>
+            <div>Source Control Procedures</div>
     </div>
     <div class="each">
             <div><i class="fas fa-check-circle"></i></div>
-            <div><p>User Interface Investigation</p></div>
+            <div>User Interface (UI) Investigation</div>
     </div>
     <div class="each">
             <div><i class="fas fa-check-circle"></i></div>
-            <div><p>User Experience (UX)</p></div>
+            <div>User Experience (UX)</div>
     </div>
     <div class="each">
             <div><i class="fas fa-check-circle"></i></div>
-            <div><p>Decision Making Procesess</p></div>
+            <div>Decision Making Procesess</div>
     </div>
     <div class="each">
             <div><i class="fas fa-check-circle"></i></div>
-            <div><p>Collection of Analytics</p></div>
+            <div>Collection of Analytics</div>
     </div>
     <div class="each">
             <div><i class="fas fa-check-circle"></i></div>
-            <div><p>Security vulnerabilities</p></div>
+            <div>Security vulnerabilities</div>
     </div>
     <div class="each">
             <div><i class="fas fa-check-circle"></i></div>
-            <div><p>Application Performance</p></div>
+            <div>Application Performance</div>
     </div>
     <div class="each">
             <div><i class="fas fa-check-circle"></i></div>
-            <div><p>Database Design</p></div>
+            <div>Database Design</div>
     </div>
     <div class="each">
             <div><i class="fas fa-check-circle"></i></div>
-            <div><p>Database Schema and Documentation</p></div>
+            <div>Database Schema and Documentation</div>
     </div>
     <div class="each">
             <div><i class="fas fa-check-circle"></i></div>
-            <div><p>Schema-less Data Structure</p></div>
+            <div>Schema-less Data Structure</div>
     </div>
     
             
