add some extra margin

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -407,6 +407,11 @@ button {
 
 .image-section {
   flex-basis: 30%;
+
+  a {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 }
 
 /* Standarised Font Styling */
