prepare .htaccess file

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,9 @@
             </div>
             <ul class="nav_links">
                 <li><a class="link" href="{{ site.baseurl }}/">Home</a></li>
-                <li><a class="link" href="{{ site.baseurl }}/lay-of-the-land/">Lay of the Land</a></li>
-                <li><a class="link" href="{{ site.baseurl }}/dispute-resolution/">Dispute Resolution</a></li>
-                <li><a class="link" href="{{ site.baseurl }}/due-diligence/">Due Diligence</a></li>
+                <li><a class="link" href="{{ site.baseurl }}/lay-of-the-land">Lay of the Land</a></li>
+                <li><a class="link" href="{{ site.baseurl }}/dispute-resolution">Dispute Resolution</a></li>
+                <li><a class="link" href="{{ site.baseurl }}/due-diligence">Due Diligence</a></li>
                 <li><a class="link bg-modal-selected">Contact</a></li>
             </ul>
             <div id="burger">
