update dispute resolution copy

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -814,7 +814,7 @@ input[type="submit"] {
     width: 400px;
     height: 50px;
     overflow: hidden;
-    border: solid 1px black;
+    border: solid 1px #171717;
 
     @media (max-width: 500px) {
       width: 300px;
