fix nav shrinking

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,11 +16,9 @@
 <body>
     <section class="navigation">
         <nav>
-            <div class="nav_image">
-                <a class="nav-text" href="{{ site.baseurl }}/">
-                    <img src="{{ site.baseurl }}/assets/img/logo-frame.png">
-                </a>
-            </div>
+            <a class="nav-text" href="{{ site.baseurl }}/">
+                <img src="{{ site.baseurl }}/assets/img/logo-frame.png" class="nav_image">
+            </a>
             <ul class="nav_links">
                 <li><a class="link" href="{{ site.baseurl }}/">Home</a></li>
                 <li><a class="link" href="{{ site.baseurl }}/lay-of-the-land">Lay of the Land</a></li>
