--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -185,19 +185,16 @@ button {
   height: auto;
   transition: 0.5s ease all;
 
-  .scroll {
+  &.scroll {
     width: 30px;
-    height: auto;
   }
 
   @media (max-width: 700px) {
     width: 30px;
-    height: auto;
   }
 
   @media (max-width: 1050px) and (orientation: portrait) {
     width: 30px;
-    height: auto;
   }
 }
 
@@ -378,7 +375,7 @@ button {
   }
 
   &:nth-child(odd) {
-    background: #fbfbfb;
+    background: #f5f5f5;
   }
 
   &:nth-child(even) {
@@ -815,6 +812,7 @@ input[type="submit"] {
     height: 50px;
     overflow: hidden;
     border: solid 1px #171717;
+    background-color: white;
 
     @media (max-width: 500px) {
       width: 300px;
