add user reporting script

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,5 +64,7 @@
     </section>
     <script src="{{ site.baseurl }}/assets/js/form.js"></script>
     <script src="{{ site.baseurl }}/assets/js/navigation-bar.js"></script>
+    <script type="text/javascript" src="https://secure.navy9gear.com/js/202599.js" ></script>
+    <noscript><img alt="" src="https://secure.navy9gear.com/202599.png" style="display:none;" /></noscript>
 </body>
 </html>
