--- a/assets/css/code.scss
+++ b/assets/css/code.scss
@@ -1,10 +1,19 @@
 ---
 ---
+.codes {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .highlight {
     background: #1e1e1e;
     border: 1px #C1C1C1;
     border-radius: 10px;
     padding: 20px;
+    width: 100%;
+    max-width: 1000px;
+    margin: 5em 20px;
+    overflow-x: scroll;
 }
 code {
     border-radius: 3px;
@@ -23,6 +32,9 @@ pre span {
     .lineno {
         color: #a9b7c6;
     }
+    .s, .c1 {
+        color: #5f864a;
+    }
     .kn, .kd, .kt, .k, .kc {
         color: #cc7832;
     }
@@ -38,10 +50,92 @@ pre span {
     .nf {
         color: #ffc66d;
     }
-    .s, .c1 {
-        color: #5f864a;
-    }
-    .mi {
+    .mi, .mf {
         color: #5c968e;
     }
 }
+
+.language-python {
+
+    .lineno {
+        color: #a9b7c6;
+    }
+    .c1 {
+        color: #6a9955;
+    }
+    .s {
+        color: #ce8349;
+    }
+    .kn, .k, .ow {
+        color: #c586b6;
+    }
+    .nn, .nc, .o, .na, .p, .nb, .n {
+        color: #a9b7c6;
+    }
+    // .nothing {
+    //     color: #9cdcfe;
+    // }
+    .bp {
+        color: #1e88da;
+    }
+    .mi, .mf {
+        color: #b5ce89;
+    }
+}
+
+.language-r {
+
+    .lineno {
+        color: #9cdcfe;
+    }
+    .c1 {
+        color: #6a9955;
+    }
+    .nn, .nc, .o, .na, .p, .nb, .n {
+        color: #a9b7c6;
+    }
+    .s1, .s2 {
+        color: #ce8349;
+    }
+    .m {
+        color: #b5ce89;
+    }
+    .kc {
+        color: #1e88da;
+    }
+}
+
+
+// .highlight .hll { background-color: #ffffcc }
+// .highlight .c { color: #008000 } /* Comment */
+// .highlight .err { border: 1px solid #FF0000 } /* Error */
+// .highlight .k { color: #0000ff } /* Keyword */
+// .highlight .cm { color: #008000 } /* Comment.Multiline */
+// .highlight .cp { color: #0000ff } /* Comment.Preproc */
+// .highlight .c1 { color: #008000 } /* Comment.Single */
+// .highlight .cs { color: #008000 } /* Comment.Special */
+// .highlight .ge { font-style: italic } /* Generic.Emph */
+// .highlight .gh { font-weight: bold } /* Generic.Heading */
+// .highlight .gp { font-weight: bold } /* Generic.Prompt */
+// .highlight .gs { font-weight: bold } /* Generic.Strong */
+// .highlight .gu { font-weight: bold } /* Generic.Subheading */
+// .highlight .kc { color: #0000ff } /* Keyword.Constant */
+// .highlight .kd { color: #0000ff } /* Keyword.Declaration */
+// .highlight .kn { color: #0000ff } /* Keyword.Namespace */
+// .highlight .kp { color: #0000ff } /* Keyword.Pseudo */
+// .highlight .kr { color: #0000ff } /* Keyword.Reserved */
+// .highlight .kt { color: #2b91af } /* Keyword.Type */
+// .highlight .s { color: #a31515 } /* Literal.String */
+// .highlight .nc { color: #2b91af } /* Name.Class */
+// .highlight .ow { color: #0000ff } /* Operator.Word */
+// .highlight .sb { color: #a31515 } /* Literal.String.Backtick */
+// .highlight .sc { color: #a31515 } /* Literal.String.Char */
+// .highlight .sd { color: #a31515 } /* Literal.String.Doc */
+// .highlight .s2 { color: #a31515 } /* Literal.String.Double */
+// .highlight .se { color: #a31515 } /* Literal.String.Escape */
+// .highlight .sh { color: #a31515 } /* Literal.String.Heredoc */
+// .highlight .si { color: #a31515 } /* Literal.String.Interpol */
+// .highlight .sx { color: #a31515 } /* Literal.String.Other */
+// .highlight .sr { color: #a31515 } /* Literal.String.Regex */
+// .highlight .s1 { color: #a31515 } /* Literal.String.Single */
+// .highlight .ss { color: #a31515 } /* Literal.String.Symbol */
